--- a/src/h5web/metadata-viewer/MetadataViewer.module.css
+++ b/src/h5web/metadata-viewer/MetadataViewer.module.css
@@ -43,7 +43,7 @@
 }
 
 .metadataViewer {
-  overflow: scroll !important;
+  overflow-y: scroll;
   scrollbar-width: thin;
 }
 
